tests/invalid/undef_symbol.err_exp
undef_symbol.m:018: In clause for predicate `undef_symbol:p/2':
undef_symbol.m:018:   error: undefined predicate `string:append/3'
undef_symbol.m:018:   (the module `string' has not been imported).
undef_symbol.m:024: In clause for predicate `undef_symbol:q/2':
undef_symbol.m:024:   error: undefined symbol `term:context/2'
undef_symbol.m:024:   (the module `term' has not been imported).
For more information, try recompiling with `-E'.
